--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+
+server.error.include-stacktrace=never
+server.error.include-exception=false
+server.error.include-message=never
+logging.level.web=DEBUG
